[package]
version = "0.1.0"
edition = "2021"
name = "fuzdl"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
console = "0.15"
dialoguer = "0.10"
futures = "0.3"
image = "0.24"
indicatif = "0.17"
printpdf = { version = "0.5", features = ["embedded_images"] }
serde = "1.0"
serde_json = "1.0"
tempfile = "3.3"
thirtyfour = "0.31"
tokio = { version = "1.20", features = ["full"] }
which = "4.2.5"
